# open-physicians

./: CITATION.cff  README.md  RELEASE-NOTES.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
data/cleaned/: physicians_clean.csv
data/metadata/: release_notes.md  scrape_log.csv
data/raw/cmq/: cmq_stub.csv
docs/: data_dictionary.md  ethics.md  methodology.md  overview.md  schema.md  sources.md
mappings/: license_status_mapping.csv  location_mapping.csv  specialty_mapping.csv
notebooks/: open_physicians_workbook.ipynb
schemas/: physician.schema.json
scripts/: export_kaggle.py  run_scraper.py  validate_schema.py
scripts/dev/: run_stub_extract.py
scripts/maintenance/: scaffold_source_modules.py  update_source_placeholders.py
src/core/: dedupe.py  http.py  ids.py  normalize.py  throttle.py
src/pipeline/: extract.py  load.py  transform.py
src/sources/: README.md
src/sources/ahpra/: README.md  __init__.py  fetch.py  mapping.yaml  parse.py
src/sources/big_register/: README.md  __init__.py  fetch.py  mapping.yaml  parse.py
src/sources/bundesaerztekammer/: README.md  __init__.py  fetch.py  mapping.yaml  parse.py
src/sources/cfm/: README.md  __init__.py  fetch.py  mapping.yaml  parse.py
src/sources/cgcom/: README.md  __init__.py  fetch.py  mapping.yaml  parse.py
src/sources/cmq/: README.md  fetch.py  mapping.yaml  parse.py
src/sources/cnom/: README.md  __init__.py  fetch.py  mapping.yaml  parse.py
tests/sources/: test_cpsbc.py  test_cpso.py
(+213 files in other folders)
